<resources>
    <string name="app_name">PadE</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="capture_image">Capture Image</string>
    <string name="preview_image">Preview Image</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_history">This is History</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">History</string>
    <string name="image_history">Image History</string>
    <string name="disease_name">Nama Penyakit</string>
    <string name="description">Deskripsi</string>
    <string name="fab">Float Action Button</string>
    <string name="suhu">20°C</string>
    <string name="weather">Hujan</string>
    <string name="date">Kamis, 20 Oktober</string>
    <string name="kecepatan_angin">Kecepatan Angin 20 km/jam</string>
    <string name="kelembaban">Kelembaban 89%</string>

</resources>